[gd_scene load_steps=5 format=3 uid="uid://bpwnrfmt3m86n"]

[ext_resource type="Script" uid="uid://h6pmx8utowar" path="res://ball.gd" id="1_yqm22"]
[ext_resource type="AudioStream" uid="uid://cu4uxh6x0i0a2" path="res://assets/sound copy.wav" id="2_41u45"]
[ext_resource type="AudioStream" uid="uid://dl06ssb77l22c" path="res://assets/sound.wav" id="3_ktgx5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g7tl7"]

[node name="Ball" type="Area2D"]
script = ExtResource("1_yqm22")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g7tl7")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="LowBounceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_41u45")

[node name="HighBounceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ktgx5")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
